completed hw7 task

--- a/hw7_elk/logstash/clickstream.conf
+++ b/hw7_elk/logstash/clickstream.conf
@@ -1,17 +1,43 @@
 input { 
   file {
     path => "/app/weblog.csv"
+    type =>"weblog"
     start_position => "beginning"
   }
 }
 
 filter {
   # Transformation goes here
+  grok {
+    # Define custom WEBLOGDATE pattern
+    pattern_definitions => { "WEBLOGDATE" => "%{MONTHDAY}[/]%{MONTH}[/]%{YEAR}[:]%{TIME}" }
+    match => { "message" => "%{IP:ip}\,\[%{WEBLOGDATE:weblogdate}\,%{WORD:http_method} %{DATA:url} HTTP/%{NUMBER:http_version}\,%{NUMBER:status}" }
+    add_tag => ["Parsed"]
+  }
+
+  # Drop not matched records
+  if "Parsed" not in [tags] {
+		drop {}
+  }
+
+  mutate
+  {
+    convert => { "status" => "integer" }
+  }
+
+  # weblogdate convert it to normal timestamp
+  date { 
+    locale => en
+    match => [ "weblogdate" , "dd/MMM/YYYY:HH:mm:ss", "dd[/]MMM[/]YYYY[:]HH[:]mm[:]ss", "dd[/]MMM[/]YYYY[:]HH:mm:ss" ]
+    target => "date_parsed"
+    timezone => "UTC"
+  }
+
 }
 
 output {
-  # elasticsearch {
-  #   hosts => "elasticsearch"
-  # }
-  stdout { codec => rubydebug }
+  elasticsearch {
+    hosts => "elasticsearch"
+    index => "otus-de-weblog"
+  }
 }
