completed hw8 files

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,9 @@ hw4_pyspark/data/*
 !hw4_pyspark/data/.gitkeep
 hw4_pyspark/output
 
-
-
 hw8_model_production/reports/*.csv
-!hw8_model_production/data/.gitkeep
+hw8_model_production/models/*.bin
+hw8_model_production/tests/*.bin
 
 # Future HW folder
 hw2_airflow
@@ -22,6 +21,7 @@ hw6_metabase_bi
 
 # Python
 __pycache__
+.pytest_cache/
 
 # Pycharm
 .idea
@@ -32,5 +32,3 @@ __pycache__
 # Mac OS-specific storage files
 .DS_Store
 
-# Credentials
-.env
