--- a/hw8_model_production/.dockerignore
+++ b/hw8_model_production/.dockerignore
@@ -10,7 +10,11 @@
 docker-compose.yml
 dockerfile
 
+build/
+dist/
+*.egg-info/
 
+.pytest_cache/
 # Byte-compiled / optimized / DLL files
 **/__pycache__/
 
@@ -18,5 +22,6 @@ dockerfile
 README.md
 notebooks/
 references/
-reports/
-samples/
+reports/*
+models/*.bin
+tests/*.bin
