--- a/hw8_model_production/requirements.txt
+++ b/hw8_model_production/requirements.txt
@@ -1,11 +1,8 @@
 pandas==1.3.3
-seaborn==0.11.2
 scikit-learn==0.23.2
-xgboost==1.4.2
-wordcloud==1.8.1
 Flask==1.1.2
-dvc==2.8.1
 pytest==6.2.4
 pyyaml==5.4.1
 click==7.1.2
 marshmallow-dataclass==8.5.3
+python-dotenv==0.19.1
